--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     </main>
 
     <footer>
-        <p>Site criado por <strong>Frederico Pereira</strong>.</p>
+        <p>Site criado por <a href="https://github.com/fredericompereira" rel="external" target="_blank">Frederico Pereira</a></p>
     </footer>
 </body>
 
