Atualização do título e da descrição

--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Um breve resumo da história do mascote do Android e algumas curiosidades sobre ele e sobre as versões do sistema operacional.">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Como surgiu o mascote do Android?</title>
+    <meta name="description" content="Projeto de página com um breve resumo da história do mascote do Android e algumas curiosidades sobre ele e as versões do sistema operacional.">
+    <title>Projeto Android</title>
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="estilos/style.css">
 </head>
